--- a/src/components/page/pageTemplate.module.css
+++ b/src/components/page/pageTemplate.module.css
@@ -1,7 +1,9 @@
 .page-wrapper {
-    position: relative;
-    margin: 730px auto 0;
-    margin-top: 30px;
+    position: absolute;
+    margin: unset;
+    top: 900px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .page-wrapper>div {
