--- a/src/components/page/pageTemplate.module.css
+++ b/src/components/page/pageTemplate.module.css
@@ -65,6 +65,7 @@ a.active,
 button.active {
     font-family: NotoSans-Medium;
     font-weight: bold;
+    font-size: 45px;
     /* color: var(--theme-text); */
 }
 
@@ -75,42 +76,36 @@ button.displayNone {
 }
 
 @media (max-width: 400px) {
+    .page-wrapper {
+        position: relative;
+        margin: 2rem auto 0;
+        top: unset;
+        left: unset;
+        transform: unset;
+    }
 
     .page-wrapper>div {
         width: 60vw;
-        align-items: flex-end;
-        /* background-color: grey; */
+        align-items: baseline;
         gap: 0rem;
     }
 
     .page-wrapper a,
     .page-wrapper button {
-        /* color: var(--theme-red); */
-        font-size: 1.5rem;
-        background-color: white;
+        font-size: 2rem;
+        background-color: transparent;
         line-height: 1;
     }
 
     .page-wrapper p {
         width: 2rem;
-        font-size: 1rem;
+        font-size: 2rem;
         font-family: 'Lobster-Regular';
     }
 
-    /*
-    .page-wrapper button:first-child,
-    .page-wrapper button:last-child {
-        margin: auto;
-    }
-
-    .page-wrapper button:focus {
-        border: unset;
-        outline: unset;
-    }*/
-
     a.active,
     button.active {
-        font-size: 2rem;
+        font-size: 3rem;
     }
 
     a.displayNone,
