--- a/src/components/index/css/about.module.css
+++ b/src/components/index/css/about.module.css
@@ -202,14 +202,12 @@
     height: 23rem;
     width: 29rem;
     margin: 0 auto;
-    /* background-image: url(/assets/mobile/about/topImage.webp); */
   }
 
   .bg {
-    /* background-image: url(/assets/mobile/about/top_bg_decorate.webp); */
-    width: calc(114rem / 3);
-    height: calc(39rem / 3);
-    top: 0;
+    position: relative;
+    width: 100%;
+    height: 13rem;
   }
 
   .welcome {
