確認yarn build可以執行、修正一些正式環境會碰到的問題，並移除不需要的程式

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -719,7 +719,7 @@ a {
     position: inherit;
     width: 154px;
     height: fit-content;
-
+    display: flex;
     flex-direction: column;
     gap: 16px;
 }
@@ -769,8 +769,8 @@ a {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    padding: 0 690px 10px;
-    justify-content: flex-end;
+    padding: 210px 690px 10px;
+    justify-content: flex-start;
     gap: 10px;
 }
 
