6.無標籤的時候 日期跑位(應該一樣置右)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -689,7 +689,9 @@ a {
     margin-top: 78px;
     font-family: Openhuninn;
 }
-
+.content-date-wrapper{
+    margin-left: auto;
+}
 .content-tags {
     position: inherit;
     display: flex;
