bugfix: 將「熱門趨勢」tags來源換成popular tags而非文章tags

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -814,6 +814,7 @@ a {
     column-gap: 31px;
     row-gap: 17px;
     justify-content: center;
+    font-size: 15px;
 }
 
 .popular-content-wrapper {
