--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -322,24 +322,19 @@ a {
     --btn-marketing-height: 39px;
     --btn-marketing-width: 162px;
     --btn-marketing-border-width: 1px;
-    background-color: white;
-    border: var(--btn-marketing-border-width) solid var(--theme-color-hex);
-    border-radius: 12px;
     color: grey;
-    cursor: pointer;
-    font-size: 16px;
+    background-color: white;
+    width: calc(var(--btn-marketing-width) + var(--btn-marketing-border-width)*2);
     height: var(--btn-marketing-height);
+    border: var(--btn-marketing-border-width) solid var(--theme-color-hex);
     line-height: calc(var(--btn-marketing-height) - var(--btn-marketing-border-width) * 2);
-    margin: 0 auto;
-    position: relative;
-    text-align: center;
-    width: var(--btn-marketing-width);
+    border-radius: 12px;
+    font-size: 16px;
     font-family: Openhuninn;
-    letter-spacing: 5px;
     font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
+    letter-spacing: 5px;
+    padding-left: 5px;
 }
 
 .btn-marketing:disabled {
@@ -593,19 +588,6 @@ a {
 .btn-marketing-wrapper.content .btn-marketing {
     filter: drop-shadow(0px 4px 4px rgb(0 0 0/0.2));
 }
-
-.btn-marketing {
-    position: relative;
-    margin: 0 auto;
-    width: 162px;
-    height: 40px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    cursor: pointer;
-    line-height: 2.5;
-}
-
 
 .top-banner-wrapper {
     position: relative;
