--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -689,9 +689,9 @@ a {
     height: 14px;
     display: flex;
     flex-direction: row;
-    align-items: baseline;
+    align-items: flex-end;
     justify-content: space-between;
-    font-size: 13.5px;
+    font-size: 15px;
 
     margin-top: 78px;
     font-family: Openhuninn;
@@ -1300,6 +1300,10 @@ a {
         transform: unset;
     }
 
+    .card-wrapper.no-card>h3 {
+        font-size: 3rem;
+    }
+
     .card {
         width: 80vw;
     }
@@ -1329,7 +1333,7 @@ a {
     }
 
     .hot-content-wrapper {
-        padding: 20rem 5rem 10rem;
+        padding: 20rem 5rem 13rem;
         margin: 3rem 0 0;
         height: fit-content;
         background: unset;
@@ -1372,8 +1376,8 @@ a {
 
     .hot-content-wrapper::after {
         background-image: url(./../assets/mobile/about/deco_blue.webp);
-        bottom: 0;
-        right: 0;
+        bottom: -1px;
+        right: -1px;
         height: 13rem;
         width: 37rem;
     }
@@ -1760,6 +1764,7 @@ a {
         margin: 2rem auto 0;
         padding: unset;
         justify-content: space-evenly;
+        font-size: 1.5rem;
     }
 
     .popular-content-wrapper {
@@ -1835,10 +1840,11 @@ a {
     .popular-content-image {
         width: 30vw;
         height: 100%;
+        flex-shrink: 0;
     }
 
     .popular-content-title {
-        font-size: 1rem;
+        font-size: 1.5rem;
         color: grey;
     }
 
