--- a/src/components/content/css/mainContent.css
+++ b/src/components/content/css/mainContent.css
@@ -21,11 +21,11 @@
   height: 101px;
   font-size: 30px;
   letter-spacing: 3px;
-  text-align: center;
+  text-align: justify;
   color: #000;
   line-height: 1.2;
-  padding: 0 20px;
   box-sizing: border-box;
+  padding: 0;
   margin: 0;
 }
 
