bugfix: 1 文章內容 問題: 1.上下一篇未與文章置中 2.上下一篇規則相反了，上一篇應該是發佈日期較舊(例圖第一篇文章應該顯示下一篇)"

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -398,6 +398,15 @@ a {
     border-color: #aaa;
 }
 
+.btn-marketing.prev {
+    margin-left: 0;
+    margin-right: auto;
+}
+
+.btn-marketing.next {
+    margin-left: auto;
+    margin-right: 0;
+}
 /* .btn-marketing:disabled:hover {
     background-color: #aaa;
     border-color: #aaa;
@@ -759,6 +768,7 @@ a {
 
 .btn-marketing-wrapper.content {
     margin: 68px auto;
+    width: 410px;
 }
 
 .btn-marketing-wrapper.content .btn-marketing {
@@ -2191,15 +2201,6 @@ a {
         margin-right: auto;
     }
 
-    .btn-marketing.prev {
-        margin-left: 0;
-        margin-right: auto;
-    }
-
-    .btn-marketing.next {
-        margin-left: auto;
-        margin-right: 0;
-    }
 
 
     .btn-marketing.spots {
