--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -459,7 +459,7 @@ a {
 }
 
 .card-wrapper {
-    --card-height: 290px;
+    --card-height: 275px;
     --card-wrapper-row-gap: 60px;
     --card-wrapper-repeat: 3;
     --card-wrapper-width: calc(370px * var(--card-wrapper-repeat));
@@ -496,17 +496,19 @@ a {
     position: relative;
     width: 314px;
     height: var(--card-height);
+    cursor: pointer;
+    overflow: hidden;
+}
+.card > div {
     display: flex;
     flex-direction: column;
-    gap: 21px;
-    overflow: hidden;
-    cursor: pointer;
+    justify-content: space-between;
+    height: 100%;
 }
-
 .card-img {
     position: inherit;
     width: 100%;
-    height: 210px;
+    height: 178px;
     overflow: hidden;
     transform: scale(1);
     transition: transform 0.1s linear;
@@ -529,7 +531,6 @@ a {
     position: inherit;
     height: 58px;
     box-sizing: border-box;
-    padding: 0 5px;
     font-size: 16px;
     letter-spacing: 3px;
     color: #53575a;
@@ -544,8 +545,7 @@ a {
 }
 
 .card-footer {
-    position: absolute;
-    bottom: 0;
+    position: relative;
     width: 100%;
     height: fit-content;
     display: flex;
