--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2254,6 +2254,7 @@ a {
     }
 
     .content-title {
+        position: relative;
         font-size: 3.5rem;
         padding: 0;
         height: fit-content;
@@ -2276,7 +2277,7 @@ a {
     }
 
     .content-misc {
-        margin-top: 2rem;
+        margin-top: 5rem;
         font-size: 1.5rem;
         height: fit-content;
         align-items: flex-end;
