為<code>設定暫時style

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -991,7 +991,7 @@ a {
     vertical-align: -0.4em;
 }
 
-.content-main-content code {
+.content-main-content p.code {
     font-size: var(--normal-font-size);
     background-color: rgba(var(--theme-color-rgb), 0.3);
     border-radius: 2px;
