--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -870,6 +870,7 @@ a {
     height: 580px;
     overflow: hidden;
 }
+
 .top-banner * img {
     object-fit: cover;
 }
@@ -1089,6 +1090,36 @@ a {
     border-radius: 50%;
     background-size: contain;
     background-color: var(--theme-color-hex);
+}
+
+.content-main-content table,
+.content-main-content th,
+.content-main-content td {
+    border: 1px solid black;
+    text-align: -webkit-match-parent;
+}
+
+.content-main-content td {
+    min-width: 50px;
+    height: 50px;
+    width: fit-content;
+    padding: 0 5px;
+}
+
+.content-main-content table.left {
+    margin-right: auto;
+}
+
+.content-main-content table.center {
+    margin: 0 auto;
+}
+
+.content-main-content table.right {
+    margin-left: auto
+}
+
+.content-main-content table {
+    border-collapse: collapse;
 }
 
 .content-right-side {
