1. index頁 改成 getServerSideProp, 不在server端生成html檔案，直接跟DB要資料即時產生html給用戶 2. 調整程式

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -478,7 +478,7 @@ a {
     opacity: 1;
 }
 
-.card-wrapper.no-card {
+.card-wrapper:has(h3) {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -486,11 +486,12 @@ a {
     height: calc(var(--card-height) * 2 + var(--card-wrapper-row-gap));
 }
 
-.card-wrapper.no-card>h3 {
+.card-wrapper>h3 {
     color: grey;
-    width: 100%;
+    width: inherit;
     text-align: center;
     font-size: 48px;
+    white-space: nowrap;
 }
 
 .card {
